syntax = "proto3";
option java_package = "com.game.protocol";
option java_outer_classname = "EmailProtocol";
import "Item.proto";

// 发送邮件请求
message SendEmailReq {
    // 邮件标题
    string title = 1;
    // 邮件内容
    string content = 2;
    // 邮件附件
    repeated EmailAttachment attachment = 3;
    // 金币
    int32 golds = 4;
    // 接收者Id
    int64 receiverId = 5;
}

message EmailAttachment{
    int64 itemId = 1;
    int32 num = 2;
}

// 发送邮件响应
message SendEmailRes{
    int32 code = 1;
    string msg = 2;
}

// 获取邮件请求
message EmailListReq{

}

// 获取邮件响应
message EmailListRes{
    int32 code = 1;
    string msg = 2;
    repeated EmailInfo email = 3;
}

// 删除邮件请求
message RemoveReq{
    int64 emailId = 1;
}

// 删除邮件响应
message RemoveRes{
    int32 code = 1;
    string msg = 2;
}

message RemoveAndExtractReq{
    int64 emailId = 1;
}

message RemoveAndExtractRes{
    int32 code = 1;
    string msg = 2;
}

// 删除所有邮件并提取附件
message RemoveAndExtractAllReq{

}

// 删除所有邮件并提取响应
message RemoveAndExtractAllRes{
    int32 code = 1;
    string msg = 2;
}


// 查看邮件 主要是为了更改邮件状态
message CheckEmailReq{
    int64 emailId = 1;
}


// 邮件数据
message EmailInfo {
    int64 id = 1;
    string title = 2;
    string sendName = 3;
    string content = 4;
    repeated ItemInfo attachments = 5;
    int32 golds = 6;
    int32 state = 7;
}

